chore(index.html): makes assets paths relative

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link rel="stylesheet" href="/styles/reset.css">
-        <link rel="stylesheet" href="/styles/page.css">
+        <link rel="stylesheet" href="./styles/reset.css">
+        <link rel="stylesheet" href="./styles/page.css">
         <title>CPACC BoK Audio Book</title>
     </head>
     <body>
@@ -38,63 +38,63 @@
                 <li>
                     <h2 id="d1a0">Content Outline Domain One A</h2>
                     <audio aria-labelledby="d1a0" controls>
-                        <source src="/audio/BoK_v001_D1_00_CPACC-Content-Outline-Domain-One-A.mp3" type="audio/mp3">
+                        <source src="./audio/BoK_v001_D1_00_CPACC-Content-Outline-Domain-One-A.mp3" type="audio/mp3">
                         Your browser does not support the <code>audio</code> element. 
                     </audio>
                     <ol>
                         <li>
                             <h3 id="d1a1">Medical Model of Disability</h3>
                             <audio aria-labelledby="d1a1" controls>
-                                <source src="/audio/BoK_v001_D1_01_Medical-Model-of-Disability.mp3" type="audio/mp3">
+                                <source src="./audio/BoK_v001_D1_01_Medical-Model-of-Disability.mp3" type="audio/mp3">
                                 Your browser does not support the <code>audio</code> element. 
                             </audio>
                         </li>
                         <li>
                             <h3 id="d1a2">Social Model of Disability</h3>
                             <audio aria-labelledby="d1a2" controls>
-                                <source src="/audio/BoK_v001_D1_02_Social-Model-of-Disability.mp3" type="audio/mp3">
+                                <source src="./audio/BoK_v001_D1_02_Social-Model-of-Disability.mp3" type="audio/mp3">
                                 Your browser does not support the <code>audio</code> element. 
                             </audio>
                         </li>
                         <li>
                             <h3 id="d1a3">Biopsychosocial Model of Disability</h3>
                             <audio aria-labelledby="d1a3" controls>
-                                <source src="/audio/BoK_v001_D1_03_Biopsychosocial-Model-of-Disability.mp3" type="audio/mp3">
+                                <source src="./audio/BoK_v001_D1_03_Biopsychosocial-Model-of-Disability.mp3" type="audio/mp3">
                                 Your browser does not support the <code>audio</code> element. 
                             </audio>
                         </li>
                         <li>
                             <h3 id="d1a4">Economic Model of Disability</h3>
                             <audio aria-labelledby="d1a4" controls>
-                                <source src="/audio/BoK_v001_D1_04_Economic-Model-of-Disability.mp3" type="audio/mp3">
+                                <source src="./audio/BoK_v001_D1_04_Economic-Model-of-Disability.mp3" type="audio/mp3">
                                 Your browser does not support the <code>audio</code> element. 
                             </audio>
                         </li>
                         <li>
                             <h3 id="d1a5">Functional Solutions Model of Disability</h3>
                             <audio aria-labelledby="d1a5" controls>
-                                <source src="/audio/BoK_v001_D1_05_Functional-Solutions-Model-of-Disability.mp3" type="audio/mp3">
+                                <source src="./audio/BoK_v001_D1_05_Functional-Solutions-Model-of-Disability.mp3" type="audio/mp3">
                                 Your browser does not support the <code>audio</code> element. 
                             </audio>
                         </li>
                         <li>
                             <h3 id="d1a6">Social Identity or Cultural Affiliation Model of Disability</h3>
                             <audio aria-labelledby="d1a6" controls>
-                                <source src="/audio/BoK_v001_D1_06_Social-Identity-Cultural-Affiliation-Model-of-Disability.mp3" type="audio/mp3">
+                                <source src="./audio/BoK_v001_D1_06_Social-Identity-Cultural-Affiliation-Model-of-Disability.mp3" type="audio/mp3">
                                 Your browser does not support the <code>audio</code> element. 
                             </audio>
                         </li>
                         <li>
                             <h3 id="d1a7">Charity Model of Disability</h3>
                             <audio aria-labelledby="d1a7" controls>
-                                <source src="/audio/BoK_v001_D1_07_Charity-Model-of-Disability.mp3" type="audio/mp3">
+                                <source src="./audio/BoK_v001_D1_07_Charity-Model-of-Disability.mp3" type="audio/mp3">
                                 Your browser does not support the <code>audio</code> element. 
                             </audio>
                         </li>
                         <li>
                             <h3 id="d1a8">Domain One A Resources List</h3>
                             <audio aria-labelledby="d1a8" controls>
-                                <source src="/audio/BoK_v001_D1_08_Domain-One-A-Resources-List.mp3" type="audio/mp3">
+                                <source src="./audio/BoK_v001_D1_08_Domain-One-A-Resources-List.mp3" type="audio/mp3">
                                 Your browser does not support the <code>audio</code> element. 
                             </audio>
                         </li>
@@ -103,42 +103,42 @@
                 <li>
                     <h2 id="d1b0">Content Outline Domain One B</h2>
                     <audio aria-labelledby="d1b0" controls>
-                        <source src="/audio/BoK_v001_D2_00_CPACC-Content-Outline-Domain-One-B.mp3" type="audio/mp3">
+                        <source src="./audio/BoK_v001_D2_00_CPACC-Content-Outline-Domain-One-B.mp3" type="audio/mp3">
                         Your browser does not support the <code>audio</code> element. 
                     </audio>
                     <ol>
                         <li>
                             <h3 id="d1b1">Visual Disabilities</h3>
                             <audio aria-labelledby="d1b1" controls>
-                                <source src="/audio/BoK_v001_D2_01_Visual-Disabilities.mp3" type="audio/mp3">
+                                <source src="./audio/BoK_v001_D2_01_Visual-Disabilities.mp3" type="audio/mp3">
                                 Your browser does not support the <code>audio</code> element. 
                             </audio>
                         </li>
                         <li>
                             <h3 id="d1b2">Auditory Disabilities</h3>
                             <audio aria-labelledby="d1b2" controls>
-                                <source src="/audio/BoK_v001_D2_02_Auditory-Disabilities.mp3" type="audio/mp3">
+                                <source src="./audio/BoK_v001_D2_02_Auditory-Disabilities.mp3" type="audio/mp3">
                                 Your browser does not support the <code>audio</code> element. 
                             </audio>
                         </li>
                         <li>
                             <h3 id="d1b3">Deaf-Blindness</h3>
                             <audio aria-labelledby="d1b3" controls>
-                                <source src="/audio/BoK_v001_D2_03_Deaf-Blindness.mp3" type="audio/mp3">
+                                <source src="./audio/BoK_v001_D2_03_Deaf-Blindness.mp3" type="audio/mp3">
                                 Your browser does not support the <code>audio</code> element. 
                             </audio>
                         </li>
                         <li>
                             <h3 id="d1b4">Speech and Language Disabilities</h3>
                             <audio aria-labelledby="d1b4" controls>
-                                <source src="/audio/BoK_v001_D2_04_Speech-and-Language-Disabilities.mp3" type="audio/mp3">
+                                <source src="./audio/BoK_v001_D2_04_Speech-and-Language-Disabilities.mp3" type="audio/mp3">
                                 Your browser does not support the <code>audio</code> element. 
                             </audio>
                         </li>
                         <li>
                             <h3 id="d1b5">Mobility, Flexibility, and Body Structure Disabilities</h3>
                             <audio aria-labelledby="d1b5" controls>
-                                <source src="/audio/BoK_v001_D2_05_Mobility-Flexibility-and-Body-Structure-Disabilities.mp3" type="audio/mp3">
+                                <source src="./audio/BoK_v001_D2_05_Mobility-Flexibility-and-Body-Structure-Disabilities.mp3" type="audio/mp3">
                                 Your browser does not support the <code>audio</code> element. 
                             </audio>
                         </li>
