chore(Cognitive Disabilities): added faster, hotter recording

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <title>CPACC BoK Audio Book</title>
     </head>
     <body>
+        <div role="comment">
+            Update: Added recording of intro to <a href="#d1b6">Cognitive Disabilties</a>. This recording is read faster than all previous sections and is provided at a louder default volume.
+        </div>
         <div>
             <a href="#main">Skip to content</a>
         </div>
@@ -139,6 +142,13 @@
                             <h3 id="d1b5">Mobility, Flexibility, and Body Structure Disabilities</h3>
                             <audio aria-labelledby="d1b5" controls>
                                 <source src="./audio/BoK_v001_D2_05_Mobility-Flexibility-and-Body-Structure-Disabilities.mp3" type="audio/mp3">
+                                Your browser does not support the <code>audio</code> element. 
+                            </audio>
+                        </li>
+                        <li>
+                            <h3 id="d1b6" tabindex="-1">Cognitive Disabilities</h3>
+                            <audio aria-labelledby="d1b6" controls>
+                                <source src="./audio/Bok_v001_D2_06_Cognitive-Disabilities.mp3" type="audio/mp3">
                                 Your browser does not support the <code>audio</code> element. 
                             </audio>
                         </li>
